syntax = "proto3";

option java_multiple_files = true;
option java_package = "hsuliz.grpc_microservice_sample.order_service.proto";
option java_outer_classname = "CryptographProto";

service CryptographService {
  rpc DecodeText(DecodeTextRequest) returns (DecodeTextResponse);
}

message DecodeTextRequest {
  string text = 1;
  uint32 runes = 2;
}

message DecodeTextResponse {
  string text = 1;
}